# sketches

./: README.md
aeye/: Cargo.toml  README.md
aeye/src/: main.rs
sand_spline/: Cargo.toml  README.md
sand_spline/src/: linspace.rs  main.rs
