[package]
name = "sand_spline"
version = "0.1.0"
authors = ["Simon Mutch <smutch.astro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.16"
bspline = "1.0"
num-traits = "0.2"

[profile.release]
incremental = true

